fixes issue with offset navigation in body causing a large gap in the body content

--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -27,7 +27,6 @@ header {
 header h1 {
   font-size: 4rem;
   text-align: center;
-
 }
 
 
@@ -45,7 +44,7 @@ header h1 {
 nav {
   display: block;
   position: relative;
-  top: -8rem;
+  top: -0.2rem;
   padding-top: 0;
 }
 
